# PECV-bench

./: .gitignore  DATA_LICENSE  README.md  pyproject.toml  requirements.txt
cli/: main.py  utils.py
cli/commands/: report.py  run.py  variants.py  variants_analysis.py
cli/reporting/: __init__.py  dataset.py  metrics.py  variants_report_plotter.py
configs/: pecv-reference.yaml
pecv-reference/: .env.example  pyproject.toml
pecv-reference/pecv_reference/: __init__.py  models.py  openrouter.py  openwebui.py  runner.py  settings.py
pecv-reference/pecv_reference/consistency_check/: handler.py  models.py  renderer.py
pecv-reference/pecv_reference/consistency_check/checker/: semantic.py  structural.py
results/pecv-reference/: report.md  summary.json  summary.md  summary.tex  variants_report.json
runs/pecv-reference/: google-gemini-2-5-flash-2025-07-27-0022-134029.yaml  google-gemini-2-5-flash-2025-07-27-0022-ad5b57.yaml  google-gemini-2-5-flash-2025-07-27-0023-e1139e.yaml  google-gemini-2-5-flash-lite-preview-06-17-2025-07-27-1720-458403.yaml  google-gemini-2-5-flash-lite-preview-06-17-2025-07-27-1720-5c51cd.yaml  google-gemini-2-5-flash-lite-preview-06-17-2025-07-27-1721-4e4cba.yaml  google-gemini-2-5-flash-lite-preview-06-17-medium-2025-07-27-1720-458403.yaml  google-gemini-2-5-flash-lite-preview-06-17-medium-2025-07-27-1720-5c51cd.yaml  google-gemini-2-5-flash-lite-preview-06-17-medium-2025-07-27-1721-4e4cba.yaml  google-gemini-2-5-flash-medium-2025-07-27-0022-134029.yaml  google-gemini-2-5-flash-medium-2025-07-27-0022-ad5b57.yaml  google-gemini-2-5-flash-medium-2025-07-27-0023-e1139e.yaml  o4-mini-2025-07-26-1033-bc56c1.yaml  o4-mini-2025-07-26-1152-1b5fe1.yaml  o4-mini-2025-07-26-1215-aa0512.yaml  openai-gpt-5-mini-medium-2025-12-13-1900-958951.yaml  openai-gpt-5-mini-medium-2025-12-13-2007-73dad1.yaml  openai-gpt-5-mini-medium-2025-12-14-1141-cef23a.yaml  openai-gpt-5-mini-medium-2026-01-06-2139-7b32af.yaml  openai-gpt-5-mini-medium-2026-01-06-2243-fda45e.yaml  openai-gpt-5-mini-medium-2026-01-07-1137-d6056e.yaml  openai-o4-mini-medium-2025-07-26-1033-bc56c1.yaml  openai-o4-mini-medium-2025-07-26-1152-1b5fe1.yaml  openai-o4-mini-medium-2025-07-26-1215-aa0512.yaml  x-ai-grok-3-mini-2025-07-26-1325-2340b6.yaml  x-ai-grok-3-mini-2025-07-26-1325-244a66.yaml  x-ai-grok-3-mini-2025-07-26-1325-667660.yaml  x-ai-grok-3-mini-medium-2025-07-26-1325-2340b6.yaml  x-ai-grok-3-mini-medium-2025-07-26-1325-244a66.yaml  (+1 more)
(+4293 files in other folders)
